# uksi

./: Cargo.toml  LICENSE.txt  README.md
.sqlx/: query-01aa751af53b4913029b5c176d1323ec4fada41cea6f67767aad21b4f0bd2460.json  query-11a3a0f6764aa5a58a3b896645c7e82ab485eb3f0a142b56e7087788a1f587e0.json  query-1591aba4e12eb54f92e0a166e8159ac2c91f083d305e9af8844a45ba3366b2c1.json  query-184e073b98fcb1aef34d2129da1dfaa2173bd8223b2c8a7088ee52324b873c8c.json  query-2e61ab256f608df539ba5438feb5d888ca03220b1cb6b4fdc7a6c6063655ee1e.json  query-3712616fb99f0590c6a47596aebf91f92aade8b9957172680c5485c9705f9f9d.json  query-40d0e25d3c4c2e96ecf82e737d897b84d3ae578e0800651adeb4d865d84268f8.json  query-48e00c2795761dcc0fd385d4c1b5209a158bc56a24ab7df348ffd867a0832043.json  query-4b0d3ae3cebafc73ef1f7eeb46642b4d40eeacbd432c5e5d06ed24127c249299.json  query-52251a66e50cfb1c2b4f1daa8da5eb25aa78e31807e138b1d0cc50bc2416e21c.json  query-533b6b69fba94097f3ba736d27eeacdab17592e357dbce81e422488ffdfd93a0.json  query-5f3f20f6b4c49894a6015fbfd3c34eb1c38bd72cf2aa840776a30cd8caf07a5c.json  query-701bf437033ade82ac2bbfb8c81d6b98494c20c5750f3a590a9963db303f1244.json  query-885d5e36fb7d79c0c7dac9688b459332539c3eef279de9fbcdcb702d91a4cdb9.json  query-898d7ebb6e9ad1b09683bf498970be4a3aed034fbfd31221258c4209faa708b9.json  query-90f52bb3f7b4b363f3e49e3ea4f3b5b1f565843528f20350b5df466becc84a13.json  query-932fee32ee39fcf7addf2c21aa1efacf5f8d977e97493b93a41bfd0e85ae7973.json  query-9e213354f5d0498904d23954e6d090d300ded11c1d8e07c8fa33f707d88124d4.json  (+9 more)
migrations/: 20251002090000_create_uksi_schema.sql  (+19 more)
(+31 files in other folders)
