[package]
name = "uksi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
fstr = "0.2.14"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "chrono", "postgres"] }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["tls-native-tls", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
